tui/tests/snapshots/prompt__keyboard_input_selects_or_cancels__ctrl_c_cancels.snap
---
source: tui/tests/prompt.rs
expression: "String::from_utf8_lossy(&bytes)"
---
Pick an option
  ● bike
  ○ [m] metro
  ○ [t] tram

  ↑/↓ navigate  Enter select  A-Z jump  Esc cancel
cancelled
