tui/tests/snapshots/prompt__keyboard_input_selects_or_cancels__custom_hotkey_selects_carpool.snap
---
source: tui/tests/prompt.rs
expression: "String::from_utf8_lossy(&bytes)"
---
Pick an option
  ● two wheeler
  ○ [s] streetcar
  ○ [z] shared ride

  ↑/↓ navigate  Enter select  A-Z jump  Esc cancel
Pick an option
  ○ [w] two wheeler
  ○ [s] streetcar
  ● shared ride

  ↑/↓ navigate  Enter select  A-Z jump  Esc cancel
Pick an option (shared ride) ✓
confirmed: Carpool
