tui/tests/snapshots/prompt__keyboard_input_selects_or_cancels__esc_accepts_default_selection.snap
---
source: tui/tests/prompt.rs
expression: "String::from_utf8_lossy(&bytes)"
---
Pick an option
  ○ [b] bike
  ● metro
  ○ [t] tram

  ↑/↓ navigate  Enter select  A-Z jump  Esc cancel
cancelled
