tui/tests/snapshots/prompt__keyboard_input_selects_or_cancels__hotkey_m_selects_metro.snap
---
source: tui/tests/prompt.rs
expression: "String::from_utf8_lossy(&bytes)"
---
Pick an option
  ● bike
  ○ [m] metro
  ○ [t] tram

  ↑/↓ navigate  Enter select  A-Z jump  Esc cancel
Pick an option
  ○ [b] bike
  ● metro
  ○ [t] tram

  ↑/↓ navigate  Enter select  A-Z jump  Esc cancel
Pick an option (metro) ✓
confirmed: Metro
