tui/tests/snapshots/prompt__keyboard_input_selects_or_cancels__non_hotkey_ignored_then_enter_confirms.snap
---
source: tui/tests/prompt.rs
expression: "String::from_utf8_lossy(&bytes)"
---
Pick an option
  ● bike
  ○ [m] metro
  ○ [t] tram

  ↑/↓ navigate  Enter select  A-Z jump  Esc cancel
Pick an option
  ● bike
  ○ [m] metro
  ○ [t] tram

  ↑/↓ navigate  Enter select  A-Z jump  Esc cancel
Pick an option (bike) ✓
confirmed: Bike
