tui/tests/snapshots/prompt__keyboard_input_selects_or_cancels__shift_tab_wraps_to_last_option.snap
---
source: tui/tests/prompt.rs
expression: "String::from_utf8_lossy(&bytes)"
---
Pick an option
  ● bike
  ○ [m] metro
  ○ [t] tram

  ↑/↓ navigate  Enter select  A-Z jump  Esc cancel
Pick an option
  ○ [b] bike
  ○ [m] metro
  ● tram

  ↑/↓ navigate  Enter select  A-Z jump  Esc cancel
Pick an option (tram) ✓
confirmed: Tram
